# climate-risk-agent

./: .dockerignore  .gcloudignore  .gitignore  DEPLOY.md  Dockerfile  LIMITATIONS.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
adr/: 0001-answering-model-selection.md
agent/: __init__.py  contracts.py  graph.py  nl.py  verdict.py
api/: app.py
evals/: __init__.py  checkers.py  claim_judge.py  determinism_probe.py  gold_set.json  gold_set.py  gold_set.sha256  gold_set_v2.json  gold_set_v2.sha256  metrics.py  run_e2e_eval.py  run_graph_eval.py  run_retrieval_eval.py  schema.py
evals/authoring/: assemble_v2.py  author_mp_osh.py  author_pi.py  v2_mp_osh.json  v2_pi.json  v2_rt_dr.json  v2_sp_ooc.json  verify_v2_rt_dr.py  verify_v2_sp_ooc.py
evals/results/: ablate-noregional-1.json  determinism-2026-07-22.json  e2e-2026-07-16.json  e2e-2026-07-22.json  e2e-gemini-2.5-flash-2026-07-22.json  e2e-gemini-3.5-flash-2026-07-22.json  e2e-test-2026-07-18.json  e2e-test-gemini-2.5-flash-2026-07-22.json  repeat2-gemini-2.5-flash.json  repeat2-gemini-3.6-flash.json  repeat3-gemini-2.5-flash.json  repeat3-gemini-3.6-flash.json  repeat4-gemini-2.5-flash.json  repeat4-gemini-3.6-flash.json  repeat5-gemini-2.5-flash.json  repeat5-gemini-3.6-flash.json  (+2 more)
obs/: log.py  report.py  telemetry.py
rag/: __init__.py  answer.py  answer_cache.py  bm25.py  chunk.py  corpus.py  dense.py  embed.py  gemini_client.py  hybrid.py  parse.py  retrieve.py  scope.py
scripts/: demo.py  download_ipcc.py
tests/: conftest.py  test_agent_nl.py  test_answer.py  test_answer_cache.py  test_api.py  test_ar6_regions.py  test_bm25.py  test_checkers.py  test_chunk.py  test_claim_judge.py  test_climatology.py  test_contracts.py  test_embed.py  test_era5.py  test_eval_schema.py  test_forecast.py  test_gemini_client.py  test_geocode.py  test_gev_trend.py  test_gold_set.py  test_gold_set_v2.py  test_graph.py  test_hazard_ci.py  test_hazard_stats.py  test_mcp_server.py  test_metrics.py  test_nl.py  test_parse.py  test_retrieve.py  test_scope.py  test_security.py  test_split_mcp.py  test_table_chunks.py  test_telemetry.py  test_ui.py  test_verdict.py
tools/: __init__.py  ar6_regions.py  climatology.py  era5.py  forecast.py  geocode.py  gev_trend.py  hazard_stats.py  ipcc_mcp.py  mcp_server.py  validation.py  weather_mcp.py
ui/: app.py
