[project]
name = "climate-risk-agent"
version = "0.1.0"
description = "Climate-Risk Analyst Agent — grounded, cited, structured climate-risk reports from live weather data + IPCC docs."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-httpx>=0.36.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
