[project]
name = "climate-risk-agent"
version = "0.1.0"
description = "Climate-Risk Analyst Agent — grounded, cited, structured climate-risk reports from live weather data + IPCC docs."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.1",
    "google-genai>=2.11.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.6",
    "mcp>=1.28.1",
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "scipy>=1.17.1",
    "streamlit>=1.59.1",
    "tqdm>=4.68.4",
    "uvicorn>=0.50.0",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.28.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-httpx>=0.36.2",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E,F = correctness; I = import order. Style-only families deliberately off —
# the linter gates real defects, not taste.
select = ["E", "F", "I"]
ignore = ["E501"]  # long lines: docstrings/prompts carry measured facts verbatim

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
files = ["agent", "obs", "api", "rag", "tools", "evals"]
